# sign

./: .env.example  .gitignore  README.md  dev.bat  dev.sh  pyproject.toml  requirements.txt
.claude/: settings.local.json
api/: admin.py  email_utils.py  jwt_utils.py  models.py  permissions.py  scope_permissions.py  scope_utils.py  serializers.py  services.py  urls.py  views.py
api/management/commands/: create_users.py  seed_data.py  setup_cache.py  test_sendgrid.py
api/migrations/: 0001_initial.py  0002_customuser_has_used_trial_customuser_role_and_more.py  0003_alter_customuser_role.py
core/: log_formatter.py  urls.py
core/settings/: __init__.py  base.py  local.py  production.py
dashboard/: decorators.py  urls.py  views.py
docs/: API_ENDPOINTS.md  AUTHENTICATION_SETUP.md  CACHE_CONFIGURATION.md  CRUD_PAGES_UPDATE.md  DASHBOARD_FIXES.md  DASHBOARD_IMPLEMENTATION.md  MOBILE_IMPLEMENTATION_SUMMARY.md  MOBILE_TESTING_CHECKLIST.md  PRIVACY_TERMS_PAGES.md  QUICKSTART.md  QUICK_REFERENCE_MOBILE.md  README.md  SENDGRID_SETUP.md  SETTINGS_MIGRATION.md  SETTINGS_SUMMARY.md  SWAGGER_PRODUCTION_FIX.md  TOAST_LOADER_GUIDE.md  USERS_PAGE_UPDATES.md
static/css/: main.css
static/js/: main.js
templates/: base.html
templates/dashboard/: home.html  login.html  messages.html  package_form.html  packages.html  privacy_policy.html  scope_form.html  scopes.html  settings.html  subscription_detail.html  subscription_edit.html  subscriptions.html  terms_conditions.html  user_detail.html  user_form.html  users.html
